# DeepSearch

./: .env.compose.example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  PLANS.md  alembic.ini  code_review.md  conftest.py  deep_research_codex_dev_spec.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
apps/web/: GEMINI.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
docs/: api.md  architecture.md  implementation-audit-2026-04-24.md  runbook.md  schema.md
docs/phases/: phase-0.md  phase-1.md  phase-10.md  phase-11.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  (+1 more)
migrations/: env.py
plans/: acquisition-bottleneck-analysis.md  acquisition-diagnostics-funnel.md  authoritative-source-discovery.md  claim-filter-recall-refactor.md  claim-selection-privacy-eligibility-cleanup.md  deployment-grounded-report-quality.md  frontend-triggered-deepsearch-loop.md  grounded-llm-report-language.md  llm-assisted-source-judge-and-planner.md  llm-iterative-research-loop-optimized.md  llm-provider-research-planner-v1.md  multiround-gap-analyzer-and-worker.md  mvp-observability-and-claim-quality.md  mvp-parsing-diagnostics-and-url-safety.md  p0-engineering-closeout.md  p1-evidence-credibility.md  phase-0-repo-scaffold.md  phase-1-ledger-schema.md  phase-10-real-infra-and-observability.md  phase-11-deployment-packaging.md  phase-2-3-multiformat-intelligence.md  phase-2-runtime-readiness-contracts.md  phase-2-task-api-and-events.md  phase-3-search-discovery.md  phase-4-http-acquisition.md  phase-5-parsing-and-chunking.md  phase-6-indexing-and-retrieval.md  phase-7-claim-drafting-and-citation-binding.md  phase-8-verification-and-conflict-handling.md  phase-9-markdown-report-synthesis.md  planner-deterministic-research-quality-layer.md  preflight-planner-and-smoke-mode.md  quality-time-observability-fixes.md  query-aware-claim-report-selection.md  report-quality-synthesis.md  searching-stage-partial-failure.md  six-task-acceptance-quality-fixes.md  technical-concept-source-quality.md  technical-explanation-search-quality.md  wikipedia-extraction-claim-diagnostics.md
scripts/: benchmark_acquisition_yield.py  benchmark_queries.py  benchmark_research_loop.py  collect_comparison_data.py  evidence_quality_benchmark.py  init_buckets.py  init_index.py  live_acceptance.py  live_acceptance_framework.py  live_deployment_acceptance.py  live_regression_research_loop.sh  migrate.sh  mock_searxng.py  phase2_multiformat_benchmark.py  phase3_intelligence_benchmark.py  research_worker.py  run_full_deepsearch.sh  smoke_deepseek_planner.py  smoke_planner_pipeline.py  smoke_test.py
services/: __init__.py
(+228 files in other folders)
